--- a/g3/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/g3/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,15 @@
     "name": "org.springframework.web",
     "type": "java.lang.String",
     "description": "A description for 'org.springframework.web'"
+  },
+  {
+    "name": "carro.swagger.dev-url",
+    "type": "java.lang.String",
+    "description": "A description for 'carro.swagger.dev-url'"
+  },
+  {
+    "name": "loja.swagger.dev-url",
+    "type": "java.lang.String",
+    "description": "A description for 'loja.swagger.dev-url'"
   }
 ]}
