--- a/g3/src/main/resources/application.properties
+++ b/g3/src/main/resources/application.properties
@@ -2,13 +2,16 @@ server.port=8080
 server.servlet.context-path=/api
 spring.banner.location=classpath:banner.txt
 
+loja.swagger.dev-url=http://localhost:8080/loja
+
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/api-seguranca
 spring.datasource.username=postgres
-spring.datasource.password=132230
+spring.datasource.password=123456
 
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
