--- a/g3/src/main/resources/application.properties
+++ b/g3/src/main/resources/application.properties
@@ -4,6 +4,14 @@ spring.banner.location=classpath:banner.txt
 
 loja.swagger.dev-url=http://localhost:8080/loja
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=g3apiserratec@gmail.com
+spring.mail.password=wahmzazoxjkycwlh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.main.allow-circular-references=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
