--- a/g3/src/main/resources/application.properties
+++ b/g3/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 server.servlet.context-path=/api
 spring.banner.location=classpath:banner.txt
 
-loja.swagger.dev-url=http://localhost:8080/loja
+loja.swagger.dev-url=http://localhost:8080/api
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
