Correção de bugs nos controllers

--- a/g3/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/g3/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -23,5 +23,10 @@
     "name": "loja.swagger.dev-url",
     "type": "java.lang.String",
     "description": "A description for 'loja.swagger.dev-url'"
+  },
+  {
+    "name": "loja.swagger.dev-url",
+    "type": "java.lang.String",
+    "description": "A description for 'loja.swagger.dev-url'"
   }
 ]}
